# lethe

./: .gitignore  BUILD_PLAN.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
deploy/: .env.example  Caddyfile  DEPLOY.md  Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  DECISIONS.md  MEMORY_LIFECYCLE.md  PRIOR_ART.md  PROGRESS.md
lethe/: __init__.py
lethe/configs/: __init__.py
lethe/llms/: qwen.py
server/: app.py
tests/: test_health.py  test_llms_qwen.py  test_qwen_check.py
